Fix alignement of video on mobile devices

--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -48,7 +48,17 @@ a {
 }
 
 .background {
+  width: auto;
+  height: 100vh;
   position: fixed;
+  top: 50%;
+  right: 50%;
+  transform: translate(50%, -50%);
+
+  @media only screen and (min-width: 768px) {
+    width: 100%;
+    height: auto;
+  }
 }
 
 .text-white {
